# nginx_sample_on_docker

./: .gitignore  Dockerfile  DockerfileNginx  app.py  docker-compose.yml  docker_compose.yml  dockerfile  dockerfile2  dockerfile3  nginx.conf  pyproject.toml  readme.md
backend/: app.py  docker_compose.yml
backend2/: app.py  docker_compose.yml  dockerfile
nginx/: nginx.conf
web/: index.html
web_1/: index.html
